[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/objects/generic/elevator.gd" type="Script" id=1]
[ext_resource path="res://sprites/objects/elevator/level1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 10 )

[node name="Elevator" type="Node2D"]
script = ExtResource( 1 )
preview = false

[node name="ElevatorTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="ElevatorBody" type="KinematicBody2D" parent="."]
position = Vector2( 0, 0.524483 )
collision_layer = 8
collision_mask = 66
motion/sync_to_physics = true

[node name="Sprite" type="Sprite" parent="ElevatorBody"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorBody"]
position = Vector2( 4, 4 )
shape = SubResource( 1 )
one_way_collision = true

[node name="DetectCarry" type="RayCast2D" parent="ElevatorBody"]
position = Vector2( -27.9938, -7.71492 )
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 66

[node name="DetectCarrySafe" type="RayCast2D" parent="ElevatorBody"]
position = Vector2( -27.9938, -16.6946 )
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 66

[node name="DetectCarryBreak" type="RayCast2D" parent="ElevatorBody"]
position = Vector2( -27.9853, -4.45762 )
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 66
